cluster/1000-pod-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-10-pods
  labels:
    app: nginx
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 10m
            memory: 10M
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: scaling-service
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
