cluster/scaling-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-6000-pods
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
---
#kind: Service
#apiVersion: v1
#metadata:
#  name: service-2000-pods
#spec:
#  ports:
#  - protocol: TCP
#    port: 80
#  type: ClusterIP
