cluster/service-7000-pods.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-7000-pods
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ClusterIP
